--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ header{
 }
 
 img{
+  margin-top: 25px;
   margin-bottom: 20px;
   height: 100px;
 }
@@ -94,4 +95,34 @@ h2{
 
 .result:hover{
   box-shadow: 3px 3px 6px rgba(0,0,0,0.2);
+}
+
+.result h3{
+  color: rgb(41, 41, 41);
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.result p{
+  color: rgb(81, 81, 81);
+  font-size: 17px;
+  margin-bottom: 15px;
+}
+
+.result a{
+  display: inline-block;
+  padding: 12px 16px; 
+  background-color: rgb(41, 41, 41);
+  color: aliceblue;
+  text-decoration: none;
+  border-radius: 15px;
+  transition: 0.4s;
+  
+}
+
+.result a:hover{
+  cursor: pointer;
+  background-color: aliceblue;
+  color: rgb(0, 0, 0);
+
 }
