--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ header{
 }
 
 img{
-  margin-top: 25px;
   margin-bottom: 20px;
   height: 100px;
 }
@@ -102,7 +101,7 @@ h2{
 }
 
 .result h3{
-  color: rgb(41, 41, 41);
+  color: rgb(59, 0, 161);
   font-size: 24px;
   margin-bottom: 15px;
 }
@@ -111,6 +110,11 @@ h2{
   color: rgb(81, 81, 81);
   font-size: 17px;
   margin-bottom: 15px;
+}
+
+.result p .searchmatch{
+  color: rgb(59, 0, 161);
+  font-weight: 700;
 }
 
 .result a{
@@ -127,6 +131,4 @@ h2{
 .result a:hover{
   cursor: pointer;
   background-color: aliceblue;
-  color: rgb(0, 0, 0);
-
-}
+  color: rgb(0, 0, 0);}
