--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,25 @@ h2{
   font-size: 20px;
   text-align: center;
   margin-bottom: 20px;
+}  
+
+.fetch{
+  font-weight: 500;
+  font-size: 17px;
+  font-style: italic;
+  animation: animate 2s linear infinite;
+}
+
+@keyframes animate{
+  0%{
+    opacity: 0;
+  }
+  50%{
+    opacity: 0.7;
+  }
+  100%{
+    opacity: 0;
+  }
 }
 
 .search-box{
